# agent-flow-lite

./: .dockerignore  .gitignore  .startup_pids  AGENTS.md  CLAUDE.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  Dockerfile  LICENSE  OPTIMIZATION_PLAN.md  README.md  auto-commit.sh  demo_script.md  docker-compose.yml  gates.yaml  implementation_plan.md  install.sh  node-config-test-report.md  package-lock.json  package.json  prd.md  start.bat  start.sh  stop.sh  tech_stack_analysis.md  test-node-config-save.js
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_chat_api.py  test_deepseek.py
backend/alembic/: env.py
backend/data/: kb_metadata.json  test_doc.txt  workflows.json
backend/scripts/: migrate_sessions_to_db.py  migrate_workflows_to_db.py  template_funnel_stats.py  verify_t1a.sh  verify_t1b.sh  verify_t3.sh
backend/tests/: test_admin_users.py  test_auth.py  test_chat_citation.py  test_chat_scoped.py  test_chat_stream_unit.py  test_chat_zep.py  test_chroma_client.py  test_code_sandbox.py  test_code_sandbox_escape.py  test_feature_flags.py  test_hybrid_retrieval.py  test_knowledge_dimension_mismatch.py  test_knowledge_store.py  test_llm_node_skill.py  test_llm_utils.py  test_publish_embed_flag.py  test_rate_limit.py  test_safety_check.py  test_security_redteam.py  test_settings_api.py  test_skill_api.py  test_skill_api_unit.py  test_skill_executor.py  test_skill_loader.py  test_sse_heartbeat.py  test_ssrf_guard.py  test_ssrf_transport.py  test_workflow_api.py  test_workflow_context.py  test_workflow_engine.py  test_workflow_skill_node.py  (+7 more)
(+402 files in other folders)
