[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "httpx>=0.27.0",
    "llama-index>=0.14.13",
    "openai>=1.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.40.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["data*", "tests*"]
